# ChangeLog for app-shells/dsh
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/dsh/ChangeLog,v 1.16 2008/01/29 01:57:58 jsbronder Exp $

*dsh-0.25.10 (29 Jan 2008)

  29 Jan 2008; Justin Bronder <jsbronder@gentoo.org> +dsh-0.25.10.ebuild:
  Version bump, bug #207909

  05 Jan 2008; Justin Bronder <jsbronder@gentoo.org> dsh-0.24.0.ebuild,
  dsh-0.25.0.ebuild, dsh-0.25.3.ebuild, dsh-0.25.7.ebuild,
  dsh-0.25.9.ebuild:
  Fix typo where RDEPEND=RDEPEND instead of DEPEND and minor syntax stuff.

*dsh-0.25.9 (23 Nov 2007)

  23 Nov 2007; Samuli Suominen <drac@gentoo.org> +dsh-0.25.9.ebuild:
  Version bump and keyword ~amd64 wrt #198457.

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml:
  Grab for cluster herd.

*dsh-0.25.7 (10 Oct 2006)

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; +dsh-0.25.7.ebuild:
  Bump.

*dsh-0.25.3 (09 Aug 2004)

  09 Aug 2004; Mike Frysinger <vapier@gentoo.org> dsh-0.25.0.ebuild,
  +dsh-0.25.3.ebuild:
  Version bump #59773 by Jens Braeuer.

*dsh-0.25.0 (02 Oct 2003)

  02 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*dsh-0.24.0 (13 Aug 2003)

  13 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #26254.

*dsh-0.23.4-r2 (11 Aug 2003)

  11 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Move configuration dir from /etc/ to /etc/dsh/ #26254

*dsh-0.23.4-r1 (20 Mar 2003)

  20 Mar 2003; Graham Forest <vladimir@gentoo.org> dsh-0.23.4-r1.ebuild:
  Removed usage of pic USE flag

*dsh-0.23.4 (23 Nov 2002)

  23 Nov 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Enrico Morelli <morelli@cerm.unifi.it>.