@@ -1,3 +1,0 @@
-MD5 537c2d720b0b503248092080f05fbd83 dsh-0.24.0.tar.gz 278782
-RMD160 ad764acd01cd6fe46ec05907066a288c0c92c16d dsh-0.24.0.tar.gz 278782
-SHA256 5dc7f5ec5af4e65011f7f3b0e36aa4df773d77eef6169415bd77c341d8ff7d0e dsh-0.24.0.tar.gz 278782
