@@ -1,3 +1,0 @@
-MD5 75605002532a50fab43c1e4d62da3caf dsh-0.25.0.tar.gz 374724
-RMD160 4ad5cefec6a3c78c53d15273fdc045f706db762c dsh-0.25.0.tar.gz 374724
-SHA256 387827bd3f6f3c3027efc77389d1c5c7e2d133eabc7b2e469350a075bd3ca7f8 dsh-0.25.0.tar.gz 374724
