@@ -1,3 +1,0 @@
-MD5 f913285d4cf17772231db9b464ebfcb6 dsh-0.25.3.tar.gz 377676
-RMD160 8a678711f7111c76f4629dd0c8caff16237f1736 dsh-0.25.3.tar.gz 377676
-SHA256 3ecf02e7df751ac3060ec2dc139fbea52daf6ab3cefde005dc0c89f2500e4b82 dsh-0.25.3.tar.gz 377676
