@@ -1,3 +1,0 @@
-MD5 28808e77310fdf346fefee4cd3f42050 dsh-0.25.7.tar.gz 391977
-RMD160 ce60acc8577e952adc38a8a4ebcb53071b308d80 dsh-0.25.7.tar.gz 391977
-SHA256 c39edb793e1f540907b4908128864aba864bc939c5d893c50a80e16c739195df dsh-0.25.7.tar.gz 391977
