@@ -1,3 +1,0 @@
-MD5 60734780242172fca9e68d223654292d dsh-0.25.9.tar.gz 394375
-RMD160 e0ce92e68e71a788e722381932c5389ff982998a dsh-0.25.9.tar.gz 394375
-SHA256 147c59c902dbd7a3290e20f41b5cc594192d6c93957d34dd061eb8d27bd9e466 dsh-0.25.9.tar.gz 394375
