@@ -1,2 +1,0 @@
-RMD160 8878f5b1cc47b975a4d48ca6ce708fc7be2f9a53 pdsh-2.11.tar.gz 607236
-SHA256 d84f3caa0fe7dcd82606506c0a9b9015b6009f7bf3f63aecf0fe02721644c0a9 pdsh-2.11.tar.gz 607236
