@@ -1,2 +1,0 @@
-RMD160 cf76e5e77712b5ecbdfcafd3124a83ea5a1ad739 pdsh-2.12.tar.bz2 437109
-SHA256 5ed4c681ed9a7171047a3ccfbeaeca1b07a3c0e14f13d7773628c28935ef33da pdsh-2.12.tar.bz2 437109
