@@ -1,2 +1,3 @@
+MD5 9a894fbdafaf8aaf3dd1466d867c2f41 pdsh-2.14.tar.bz2 445693
 RMD160 732fb8f0923ce5222dd88332766832621ad8a32c pdsh-2.14.tar.bz2 445693
 SHA256 7f08f4c78d5370683b27ae0db42817f72a21c3a2bb0db0c3ac8175f2f407a563 pdsh-2.14.tar.bz2 445693
