@@ -1,2 +1,0 @@
-RMD160 8a6f998561a04e44460dd225cd9a32d9b2d2cc7d pdsh-2.9.tar.gz 602810
-SHA256 8b129323d2df082df5973a57b304161d6a464955dece2614de11ff102247f24f pdsh-2.9.tar.gz 602810
