@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/pdsh
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/pdsh/ChangeLog,v 1.7 2008/01/29 01:38:04 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/pdsh/ChangeLog,v 1.8 2008/01/31 06:44:04 dberkholz Exp $
+
+  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -pdsh-2.9.ebuild,
+  -pdsh-2.11.ebuild, -pdsh-2.12.ebuild:
+  Clean up.
 
   29 Jan 2008; Justin Bronder <jsbronder@gentoo.org> pdsh-2.9.ebuild,
   pdsh-2.11.ebuild, pdsh-2.12.ebuild, pdsh-2.14.ebuild:
