@@ -1,6 +1,11 @@
 # ChangeLog for app-shells/dsh
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/dsh/ChangeLog,v 1.16 2008/01/29 01:57:58 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/dsh/ChangeLog,v 1.17 2008/01/31 06:43:18 dberkholz Exp $
+
+  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -dsh-0.24.0.ebuild,
+  -dsh-0.25.0.ebuild, -dsh-0.25.3.ebuild, -dsh-0.25.7.ebuild,
+  -dsh-0.25.9.ebuild:
+  Clean up.
 
 *dsh-0.25.10 (29 Jan 2008)
 
